# CEApy

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  token_CEApy.txt
CEApy/: CEApy.py  __init__.py  teste.py  tests.py
CEApy/cea-exec/: L22_analise_nitrometano.csv  L22_analise_nitrometano.inp  L22_analise_nitrometano.out  L22_analise_nitrometano.plt  cea_python.bat  thermo_convertido.txt
src/CEApy/: CEApy.py  thermo_bib_conversion_inp_to_txt.py
src/CEApy/cea-exec/: cea_python_input.txt  thermo.txt
