[build-system]
requires = ["setuptools>=65.5.0",
            "numpy>=1.23.5",
            "pandas>=1.5.2",
            ]
build-backend = "setuptools.build_meta"
[project]
name = "CEApy"
version = "0.0.1"
authors = [
  { name="Julio Cesar Rodrigues Machado", email="julioromac@outlook.com" },
  { name="Julio Cesar Rodrigues Machado", email="machado.juliocr@gmail.com" },
]
description = "Library to automate analyzes in CEA NASA"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/juliomachad0/CEApy.git"
"Bug Tracker" = "https://github.com/juliomachad0/CEApy/issues"